--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12",
-    "pug": "^3.0.2"
+    "express-es6-template-engine": "^2.2.3",
+    "mongoose": "^6.0.12"
   }
 }
